Fix for rising z value in filtered data, and invalid reference to odom

--- a/ugv_sim/config/robot_localization/ekf.yaml
+++ b/ugv_sim/config/robot_localization/ekf.yaml
@@ -66,21 +66,21 @@ permit_corrected_publication: false
 map_frame: map              # Defaults to "map" if unspecified
 odom_frame: bowser2/odom            # Defaults to "odom" if unspecified
 base_link_frame: bowser2/base_link  # Defaults to "base_link" if unspecified
-world_frame: odom           # Defaults to the value of odom_frame if unspecified
+world_frame: bowser2/odom           # Defaults to the value of odom_frame if unspecified
 
-# odom0: bowser2/odom
-# odom0_config: [true,  true,  true,
-#                true, true, true,
-#                false, false, false,
-#                false, false, false,
-#                true, true, true]
+odom0: bowser2/odom
+odom0_config: [true, true, false,
+               false, false, true,
+               true, false, false,
+               false, false, true,
+               false, false, false]
 
 imu0: bowser2/imu
-imu0_config: [ false,  false, false,
+imu0_config: [ false, false, false,
                true, true, true,
                false, false, false,
-               true, true, true,
-               true, true, true]
+               false, false, true,
+               true, false, false]
 
 use_control: true
 # Whether the input (assumed to be cmd_vel) is a geometry_msgs/Twist or geometry_msgs/TwistStamped message. Defaults to false.
