--- a/ugv_vision/package.xml
+++ b/ugv_vision/package.xml
@@ -2,12 +2,12 @@
 <package format="2">
   <name>ugv_vision</name>
   <version>0.0.0</version>
-  <description>The ugv_vision package</description>
+  <description>Marc's computer vision scripts</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="marc@todo.todo">marc</maintainer>
+  <maintainer email="mas1660@knights.ucf.edu">marc</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
