--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "velodyne_simulator"]
-	path = velodyne_simulator
+	path = ugv_sim/velodyne_simulator
 	url = https://bitbucket.org/DataspeedInc/velodyne_simulator.git
 [submodule "vectornav"]
-	path = vectornav
+	path = ugv_hardware/vectornav
 	url = https://github.com/dawonn/vectornav.git
 [submodule "velodyne"]
 	path = velodyne
 	url = https://github.com/ros-drivers/velodyne.git
 [submodule "zed-ros-wrapper"]
-	path = zed-ros-wrapper
+	path = ugv_hardware/zed-ros-wrapper
 	url = https://github.com/stereolabs/zed-ros-wrapper.git
