--- a/ugv_sim/package.xml
+++ b/ugv_sim/package.xml
@@ -9,6 +9,8 @@
   <license>TODO: License declaration</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>hector_gazebo_plugins</build_depend>
+  <exec_depend>hector_gazebo_plugins</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
