--- a/ugv_description/urdf/choo_choo/model.config
+++ b/ugv_description/urdf/choo_choo/model.config
@@ -2,7 +2,7 @@
 <model>
   <name>Choo Choo</name>
   <version>1.0</version>
-  <sdf version="1.5">model.sdf</sdf>
+  <sdf version="1.5">model.urdf</sdf>
 
   <author>
     <name>Wes</name>
