--- a/ugv_nav/config/robot_localization/dual_ekf_navsat.yaml
+++ b/ugv_nav/config/robot_localization/dual_ekf_navsat.yaml
@@ -2,7 +2,7 @@ ekf_se_odom:
   frequency: 30
   sensor_timeout: 0.1
   two_d_mode: true
-  transform_time_offset: 0.0
+  transform_time_offset: 0.2
   transform_timeout: 0.0
   print_diagnostics: true
   debug: false
@@ -15,7 +15,7 @@ ekf_se_odom:
   base_link_frame: base_link  # Defaults to "base_link" if unspecified
   world_frame: odom           # Defaults to the value of odom_frame if unspecified
 
-  odom0: /choo_choo/odom
+  odom0: /choo_2/odom
   odom0_config: [true,  true,  false,    # x, y, z
                  false, false, true,   # r, p, y
                  true, true, false,   # vx, vy, vz
@@ -26,7 +26,7 @@ ekf_se_odom:
   odom0_differential: false
   odom0_relative: false
 
-  imu0: /choo_choo/imu
+  imu0: /choo_2/imu
   imu0_config: [false, false, false,
               true,  true,  false,
               false, false, false,
@@ -51,7 +51,7 @@ ekf_se_map:
   frequency: 30
   sensor_timeout: 0.1
   two_d_mode: true
-  transform_time_offset: 0.0
+  transform_time_offset: 0.2
   transform_timeout: 0.0
   print_diagnostics: true
   debug: false
@@ -83,7 +83,7 @@ ekf_se_map:
   odom1_differential: false
   odom1_relative: false
 
-  imu0: /choo_choo/imu
+  imu0: /choo_2/imu
   imu0_config: [false, false, false,
                 true,  true,  false,
                 false, false, false,
