--- a/ugv_nav/config/robot_localization/dual_ekf_navsat.yaml
+++ b/ugv_nav/config/robot_localization/dual_ekf_navsat.yaml
@@ -26,7 +26,19 @@ ekf_se_odom:
   odom0_differential: false
   odom0_relative: false
 
-  imu0: /choo_2/imu
+  # visual odometry from ZED camera
+  odom1: /zed/zed_node/odom
+  odom1_config: [true,  true,  true,    # x, y, z
+                 true, true, true,   # r, p, y
+                 false, false, false,   # vx, vy, vz
+                 false, false, false,   # vr, vp, vy
+                 false, false, false]   # ax, ay, az
+  odom1_queue_size: 10
+  odom1_nodelay: true
+  odom1_differential: false
+  odom1_relative: false
+
+  imu0: /vectornav/IMU
   imu0_config: [false, false, false,
               true,  true,  false,
               false, false, false,
@@ -83,12 +95,12 @@ ekf_se_map:
   odom1_differential: false
   odom1_relative: false
 
-  imu0: /choo_2/imu
+  imu0: /vectornav/IMU
   imu0_config: [false, false, false,
-                true,  true,  false,
-                false, false, false,
-                true,  true,  true,
-                true,  true,  true]
+              true,  true,  false,
+              false, false, false,
+              true,  true,  true,
+              true,  true,  true]
   imu0_nodelay: false
   imu0_differential: false
   imu0_relative: false
