--- a/ugv_nav/config/robot_localization/dual_ekf_navsat.yaml
+++ b/ugv_nav/config/robot_localization/dual_ekf_navsat.yaml
@@ -118,7 +118,7 @@ navsat_transform:
   magnetic_declination_radians: 0.043109  # For lat/long 49.9, 8.89
   yaw_offset: 1.570796327  # IMU reads 0 facing magnetic north, not east
   zero_altitude: false
-  broadcast_cartesian_transform: false
+  broadcast_cartesian_transform: true
   publish_filtered_gps: true
   use_odometry_yaw: false
   wait_for_datum: false
