--- a/ugv_nav/config/move_base/costmap_common_params.yaml
+++ b/ugv_nav/config/move_base/costmap_common_params.yaml
@@ -3,7 +3,7 @@ obstacle_range: 20
 raytrace_range: 20
 footprint: [[0.4725,-0.365], [0.4725,0.365], [-0.4725,0.365], [-0.4725,-0.365]]
 # footprint_padding: 0.01
-inflation_radius: 0.25
+inflation_radius: 0.15
 
 plugins:
   - {name: obstacles_3d,      type: "costmap_2d::VoxelLayer"}
@@ -14,35 +14,39 @@ plugins:
 
 obstacles_3d:
   enabled:                true
-  # max_obstacle_height:    2.0 
-  # min_obstacle_height:    0.08
+  # max_obstacle_height:    2.0
+
+  min_obstacle_height:    0.1
   origin_z:               0.0    # meters
-  z_resolution:           0.2
-  z_voxels:               10
+  z_resolution:           0.1
+  z_voxels:               10s
   unknown_threshold:      15     # voxel height
   mark_threshold:         0      # voxel height
   combination_method:     1      # 1=max, 0=override
   track_unknown_space:    true   # default space is unknown
   obstacle_range:         20    # meters
-  raytrace_range:         20
-  publish_voxel_map:      true
-  observation_sources:   depth_camera
+  raytrace_max_range:         0.1
+  # raytrace_min_range: 0
+  publish_voxel_map:      false
+  clearing: false
+  marking: true
+
+  observation_persistence: 0.0
+  observation_sources:   velodyne
   depth_camera:
     data_type: PointCloud2
+    observation_persistence: 0.0
     topic: /zed/zed_node/point_cloud/cloud_registered
     sensor_frame: zed_left_camera_frame
-    marking: true
-    clearing: true
-    # max_obstacle_height: 2.0
-    # min_obstacle_height: 0.08
+    #max_obstacle_height: 2.0
+    min_obstacle_height: 0.3
   velodyne:
     data_type: PointCloud2
+
     topic: /velodyne_points
     sensor_frame: velodyne
-    marking: true
-    clearing: true
-    # max_obstacle_height: 2.0
-    # min_obstacle_height: 0.08
+    max_obstacle_height: 2.0
+    min_obstacle_height: 0.2
 
 # obstacles_2d:
 #   enabled:                true
