--- a/ugv_nav/config/robot_localization/dual_ekf_navsat.yaml
+++ b/ugv_nav/config/robot_localization/dual_ekf_navsat.yaml
@@ -162,6 +162,7 @@ navsat_transform:
   yaw_offset: 1.570796327  # IMU reads 0 facing magnetic north, not east
   zero_altitude: false
   broadcast_cartesian_transform: true
+  # broadcast_utm_transform_as_parent_frame:true
   publish_filtered_gps: true
   use_odometry_yaw: false
   wait_for_datum: false
