--- a/ugv_nav/config/move_base/costmap_common_params.yaml
+++ b/ugv_nav/config/move_base/costmap_common_params.yaml
@@ -8,45 +8,53 @@ inflation_radius: 0.15
 plugins:
   - {name: obstacles_3d,      type: "costmap_2d::VoxelLayer"}
   - {name: obstacles_2d,      type: "costmap_2d::ObstacleLayer"}
-  - {name: cv_detection_layer, type: "cv_detection_layer_namespace::CVDetectionLayer"}
+  - {name: simple_layer,      type: "cv_detection_layer_namespace::CVDetectionLayer"}
   - {name: inflation_layer,   type: "costmap_2d::InflationLayer"}
 #   # - {name: external_costmap,  type: "costmap_2d::StaticLayer"}
+
+
+cv_detection_layer_namespace:
+  enabled: true
 
 obstacles_3d:
   enabled:                true
   # max_obstacle_height:    2.0
 
-  min_obstacle_height:    0.1
+  min_obstacle_height:    0.2
   origin_z:               0.0    # meters
-  z_resolution:           0.1
-  z_voxels:               10s
-  unknown_threshold:      15     # voxel height
-  mark_threshold:         0      # voxel height
+  z_resolution:           0.05
+  z_voxels:               2
+  unknown_threshold:      1     # voxel height
+  mark_threshold:         2      # voxel area
   combination_method:     1      # 1=max, 0=override
   track_unknown_space:    true   # default space is unknown
-  obstacle_range:         20    # meters
-  raytrace_max_range:         0.1
-  # raytrace_min_range: 0
-  publish_voxel_map:      false
-  clearing: false
+  obstacle_range:         5    # meters
+  raytrace_max_range:     20
+  publish_voxel_map:      true
+  clearing: true
   marking: true
 
   observation_persistence: 0.0
-  observation_sources:   velodyne
+  observation_sources: depth_camera
+  
   depth_camera:
     data_type: PointCloud2
     observation_persistence: 0.0
     topic: /zed/zed_node/point_cloud/cloud_registered
     sensor_frame: zed_left_camera_frame
-    #max_obstacle_height: 2.0
+    max_obstacle_height: 2.0
     min_obstacle_height: 0.3
+    clearing: false
+    marking: false
+  
   velodyne:
     data_type: PointCloud2
-
     topic: /velodyne_points
     sensor_frame: velodyne
     max_obstacle_height: 2.0
-    min_obstacle_height: 0.2
+    min_obstacle_height: 0.3
+    clearing: false
+    marking: false
 
 # obstacles_2d:
 #   enabled:                true
